--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,2 +1,2 @@
-h1 Questions#index
-p Find me in app/views/questions/index.html.slim
+h1 質問一覧
+= link_to '質問作成', new_question_path, class: 'btn btn-primary'
