--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,2 +1,14 @@
 h1 質問一覧
 = link_to '質問作成', new_question_path, class: 'btn btn-primary'
+
+.mb-3 
+table.table.table-hover 
+  thead.thead-default 
+    tr 
+      th= Question.human_attribute_name(:title)
+      th= Question.human_attribute_name(:description)
+  tbody 
+    - @questions.each do |question|
+      tr
+        td= question.title 
+        td= question.description
