詳細画面の実装

--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -10,5 +10,5 @@ table.table.table-hover
   tbody 
     - @questions.each do |question|
       tr
-        td= question.title 
+        td= link_to question.title, question  
         td= question.description
