--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,2 +1,15 @@
-h1 Questions#show
-p Find me in app/views/questions/show.html.slim
+h1 質問の詳細
+
+.nav.justify-content-end 
+  = link_to '質問作成', new_question_path, class: 'nav-link'
+table.table.table-hover
+  tbody 
+    tr
+      th= Question.human_attribute_name(:id)
+      td= @question.id
+    tr
+      th= Question.human_attribute_name(:title)
+      td= @question.title
+    tr
+      th= Question.human_attribute_name(:description)
+      td= simple_format(h(@question.description), {}, sanitize: false, wrapper_tag: "div")
