--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -9,5 +9,5 @@ h1 質問作成
     = f.text_field :title, class: 'form-control', id: 'question_title'
   .form-group 
     = f.label :description
-    = f.text_field :title, class: 'form-control', id: 'questions_description'
+    = f.text_field :description, class: 'form-control', id: 'questions_description'
   = f.submit nil, class: 'btn btn-primary'
