--- a/app/views/questions/edit.html.slim
+++ b/app/views/questions/edit.html.slim
@@ -3,11 +3,4 @@ h1 質問の編集
 .nav.justify-content-end 
   = link_to '質問作成', new_question_path, class: 'nav-link'
 
-= form_with model: @question, local: true do |f|
-  .form-group 
-    = f.label :title
-    = f.text_field :title, class: 'form-control', id: 'question_title'
-  .form-group 
-    = f.label :description
-    = f.text_field :description, rows: 5, class: 'form-control', id: 'question_description'
-  = f.submit nil, class: 'btn btn-primary'
+= render partial: 'form', locals: { task: @task }
