--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -2,12 +2,5 @@ h1 質問作成
 
 .nav.justify-content-end
   = link_to '質問作成', new_question_path , class: 'nav-link'
-
-= form_with model: @question, local: true do |f|
-  .form-group
-    = f.label :title
-    = f.text_field :title, class: 'form-control', id: 'question_title'
-  .form-group 
-    = f.label :description
-    = f.text_field :description, class: 'form-control', id: 'questions_description'
-  = f.submit nil, class: 'btn btn-primary'
+  
+= render partial: 'form', locals: { question: @question }
