--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -13,3 +13,5 @@ table.table.table-hover
     tr
       th= Question.human_attribute_name(:description)
       td= simple_format(h(@question.description), {}, sanitize: false, wrapper_tag: "div")
+= link_to '編集', edit_question_path, class: 'btn btn-primary mr-3'
+= link_to '削除', @question, method: :delete, data: {confirm: '質問を削除します。よろしいですか？'}, class: 'btn btn-danger' 
