--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,6 +1,14 @@
 h1 質問一覧
 = link_to '質問作成', new_question_path, class: 'btn btn-primary'
 
+= search_form_for @q, class: 'mb-5' do |f|
+  .form-group.row 
+    = f.label :title_cont, 'タイトル', class: 'col-sm-2 col-form-label'
+    .col-sm-10 
+      = f.search_field :title_cont, class: 'form-control'
+  .form-group 
+    = f.submit class: 'btn btn-outline-primary'
+
 .mb-3 
 table.table.table-hover 
   thead.thead-default 
