--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -22,6 +22,8 @@ table.table.table-hover
     tr
       th= User.human_attribute_name(:updated_at)
       td= @user.updated_at
-
+    tr
+      th= User.human_attribute_name(:image)
+      td= image_tag @user.image if @user.image.attached?
 = link_to '編集', edit_admin_user_path, class: 'btn btn-primary mr-3'
-= link_to '削除', [:adimn, @user], method: :delete, data: { confirm: 'ユーザーを削除します。よろしいですか？' }, class: 'btn btn-danger'
+= link_to '削除', [:admin, @user], method: :delete, data: { confirm: 'ユーザーを削除します。よろしいですか？' }, class: 'btn btn-danger'
