--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -19,4 +19,13 @@ table.table.table-hover
 
 / = link_to '解決済みにする', question_solve_path, method: :put, data: {confirm: '解決済みにしますか？'}, class: 'btn btn-sm btn-info' 
 = link_to '編集', edit_question_path, class: 'btn btn-primary mr-3'
-= link_to '削除', @question, method: :delete, data: {confirm: '質問を削除します。よろしいですか？'}, class: 'btn btn-danger' 
+= link_to '削除', @question, method: :delete, data: {confirm: '質問を削除します。よろしいですか？'}, class: 'btn btn-danger'
+
+.card.card-body 
+  = form_with model: [@question, @answer], local: true do |f|
+    .form-group
+      = f.hidden_field :user_id, { value: current_user.id } 
+      = f.hidden_field :question_id, { value: @question.id }
+      = f.label :description, '回答内容'
+      = f.text_area :description, class: 'form-control', id: 'answer_description'
+    = f.submit nil, class: 'btn btn-primary'
